# shape-blast

./: .rustfmt.toml  Cargo.toml
assets/: bindings.ron
assets/shapes/: bullet.ron  player.ron
src/: game_loop.rs  main.rs
src/game/: frame_timer.rs  mod.rs  utils.rs
src/gameplay/: mod.rs  movement.rs  player.rs
src/graphics/: camera.rs  color.rs  mod.rs  renderer_status.rs  shape_builder.rs  shapes.rs
src/graphics/shape/: mod.rs  shape.rs  shape_builder.rs  shape_renderer.rs  shape_shader.wgsl
src/input/: button_bindings.rs  controller.rs  cursor_position.rs  keybindings.rs  mod.rs
