[package]
name = "shape-blast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
derive_more = { version = "1.0.0-beta.3", features = ["full"] }
glam = { version = "0.24", features = ["bytemuck"] }
lyon = "1.0" 
pollster = "0.3"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
sparsey = "0.11"
wgpu = "0.17"
winit = { git = "https://github.com/rust-windowing/winit", features = ["serde"] }
